# arkavo-edge

./: .gitignore  AGENT_PROMPT_AXP_FIX.md  AXP_FIX_MCP_RESPONSE.json  AXP_HARNESS_FIX_GUIDE.md  CLAUDE.md  CLEANUP_SUMMARY.md  Cargo.toml  README.md  README_ZERO_CONFIG.md  REQUIREMENTS.md  TEST_IDB_DIRECT.md  THIRD-PARTY-LICENSES.md  debug_axp_compilation.sh  demo_test_runner.sh  find_axp_symbols.sh  iOS26_BETA_FIX_SUMMARY.md  ios_26_beta_fixer_tool.json  quick_test.sh  test_idb_direct.rs  test_idb_env.rs  test_idb_fix.md  test_idb_init.rs  test_list_tests.sh  test_mcp_runner.sh  test_mcp_validation.py  test_state_management.sh  test_swift_discovery.sh  test_xctest.rs
.github/: BRANCH_PROTECTION.md
crates/arkavo/: Cargo.toml  build.rs
crates/arkavo-chat/: Cargo.toml
crates/arkavo-chat/src/: lib.rs  session.rs  ui.rs
crates/arkavo-cli/: Cargo.toml
crates/arkavo-cli/src/: lib.rs  mcp_client.rs  mcp_integration.rs
crates/arkavo-cli/src/commands/: apply.rs  chat.rs  mcp.rs  mcp_backup.rs  mcp_fixed.rs  mcp_test.rs  mcp_validated.rs  mod.rs  plan.rs  test.rs  vault.rs
crates/arkavo-cli/tests/: chat_test.rs
crates/arkavo-llm/: Cargo.toml  TEST_PLAN.md  TOKENIZER_DEBUG.md  build.rs
crates/arkavo-llm/src/: candle_forward.rs  candle_generation.rs  candle_kv_cache.rs  candle_model.rs  candle_model_core.rs  candle_model_create.rs  candle_model_gguf.rs  candle_transformer_layer.rs  chat.rs  client.rs  embedded_model.rs  error.rs  image.rs  lib.rs  message.rs  model.rs  provider.rs  stream.rs  tokenizer.rs  tokenizer_data.rs  tokenizer_debug.rs  tokenizer_embedded.rs  tokenizer_gguf.rs  tokenizer_gguf_core.rs  tokenizer_gguf_decoding.rs  tokenizer_gguf_encoding.rs  tokenizer_gguf_loader.rs  tokenizer_hf.rs  tokenizer_static.rs  utils.rs
crates/arkavo-llm/src/bin_old/: chat_test.rs  token_check.rs
crates/arkavo-llm/src/candle/: forward.rs  generation.rs  mod.rs
crates/arkavo-llm/src/ollama/: client.rs  mod.rs  types.rs
crates/arkavo-llm/tests/: chat_integration_test.rs  gguf_tokenizer_test.rs  hf_tokenizer_test.rs  integration_test.rs  ollama_integration.rs  token_check.rs  tokenizer_benchmark.rs  tokenizer_debug_test.rs  utils_test.rs  vision_integration.rs  zero_config_test.rs
crates/arkavo-test/: Cargo.toml  README.md  README_XCUITEST.md  build.rs  verify_idb.sh
crates/arkavo-test/docs/: BIOMETRIC_DIALOG_HANDLING.md
crates/arkavo-test/examples/: banking_app.feature  claude_sdk_integration.rs  gherkin_runner.rs  simple_test_demo.rs  test_mcp_server.rs  xctest_demo.rs
crates/arkavo-test/src/: lib.rs  persistent_state.rs  security.rs  state_store.rs  state_store_test.rs
crates/arkavo-test/src/ai/: analysis_engine.rs  claude_client.rs  mod.rs  planner.rs
crates/arkavo-test/src/bridge/: ios_ffi.rs  ios_impl.c  ios_stub.c  mod.rs
crates/arkavo-test/src/execution/: intelligent_runner.rs  mod.rs  runner.rs  snapshot.rs  state.rs
crates/arkavo-test/src/gherkin/: mapper.rs  mod.rs  parser.rs
crates/arkavo-test/src/integration/: auto_discover.rs  mod.rs  runtime_injection.rs
crates/arkavo-test/src/mcp/: app_diagnostic_tool.rs  applescript_tap.rs  axp_harness_builder.rs  biometric_dialog_handler.rs  biometric_test_scenarios.rs  calibration_setup_tool.rs  calibration_tools.rs  code_analysis_tools.rs  coordinate_tools.rs  coordinate_validator.rs  deeplink_tools.rs  device_boot_manager.rs  device_health_manager.rs  device_manager.rs  device_tools.rs  device_xctest_status.rs  embedded_ios26_fix.rs  enrollment_dialog_handler.rs  enrollment_flow_handler.rs  error_codes.rs  face_id_control.rs  frameworks_data.rs  idb_companion_health.rs  idb_direct_wrapper.rs  idb_error_handler.rs  idb_installer.rs  idb_management_tool.rs  idb_port_manager.rs  idb_recovery.rs  idb_tap_enhanced.rs  idb_ui_tools.rs  idb_unified.rs  idb_wrapper.rs  intelligent_tools.rs  ios26_beta_guidance.rs  ios_automation_guide.rs  ios_biometric_tools.rs  ios_errors.rs  ios_tools.rs  log_stream_tools.rs  (+32 more)
crates/arkavo-test/src/mcp/calibration/: README.md  agent.rs  data.rs  mod.rs  reference_app.rs  server.rs  validation.rs  verification.rs
crates/arkavo-test/src/reporting/: business_report.rs  mod.rs
crates/arkavo-test/templates/: ArkavoAXBridge.swift  ArkavoAXBridgeIOS26.swift  ArkavoAXBridgeMinimal.swift  ArkavoAXPService.swift  ArkavoTestRunnerMinimal.swift  SymbolDiscovery.swift  report_html.hbs  report_markdown.hbs
crates/arkavo-test/templates/XCTestRunner/: ArkavoTestRunner.swift.template  ArkavoTestRunnerAXP.swift.template  ArkavoTestRunnerEnhanced.swift.template  GenericAXPHarness.plist.template  Info.plist.template
crates/arkavo-test/tests/: biometric_honest_failures.rs  calibration_debug_test.rs  calibration_demo.rs  calibration_feedback_loop_test.rs  calibration_stuck_debug.rs  enrollment_dialog_test.rs  enrollment_flow_test.rs  idb_framework_conflict_test.rs  idb_recovery_test.rs  ios_bridge_test.rs  mcp_integration.rs  security_tests.rs  simple_runner_test.rs  template_compilation_test.rs  test_arkavo_dir_extraction.rs  test_calibration_taps.rs  test_enhanced_tap.rs  test_idb_companion_startup.rs  test_idb_connection.rs  test_idb_init.rs  test_idb_simple.rs  test_idb_tap_simple.rs  test_mcp_calibration.rs  test_mcp_idb_integration.rs  test_mcp_idb_tap.rs  test_mcp_ready.rs  test_mcp_server_idb.rs  ui_element_handler_test.rs  ui_interaction_test.rs  xcode_version_test.rs  xctest_basic_sanity.rs  xctest_bridge_verification.rs  xctest_direct_test.rs  xctest_fast_cycle.rs  xctest_integration.rs  xctest_minimal_test.rs  xctest_sanity.rs  xctest_socket_test.rs  xctest_with_target_app.rs
crates/arkavo/src/: main.rs
docs/: AI_AGENT_MCP_USAGE_GUIDE.md  BIOMETRIC_TESTING_GUIDE.md  BIOMETRIC_TESTING_LIMITATIONS.md  CALIBRATION_AGENT_UPDATE_SUMMARY.md  CALIBRATION_AUTO_RECOVERY.md  CALIBRATION_SYSTEM_DEMO.md  CALIBRATION_TROUBLESHOOTING.md  ENROLLMENT_DIALOG_FIX.md  FACE_ID_AUTHENTICATION.md  HANDLING_BIOMETRIC_DIALOGS.md  IDB_AUTO_RECOVERY_ENHANCEMENT.md  IDB_COMPANION_INTEGRATION.md  IDB_COMPANION_MONITORING.md  IDB_FRAMEWORK_CONFLICTS.md  IDB_FRAMEWORK_HANDLING.md  STUBS_TODO.md  (+18 more)
(+48 files in other folders)
