[package]
name = "arkavo-chat"
version = "0.2.0"
edition = "2021"
description = "Chat interface for Arkavo Edge"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.49"
tracing = "0.1.37"
tokio = { version = "1.32.0", features = ["full"] }
arkavo-llm = { path = "../arkavo-llm" }
arkavo-terminal = { path = "../arkavo-terminal" }