[package]
name = "arkavo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI Core for the Arkavo agentic CLI tool - command parser and multi-step agent loop"

[dependencies]
arkavo-terminal = { path = "../arkavo-terminal" }
arkavo-repo = { path = "../arkavo-repo" }
arkavo-git = { path = "../arkavo-git" }
arkavo-test = { path = "../arkavo-test" }
anyhow = "1.0"
tokio = { version = "1.41", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"