[package]
name = "arkavo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Main binary for the Arkavo agentic CLI tool"

[dependencies]
arkavo-cli = { path = "../arkavo-cli" }
anyhow = "1.0"

[[bin]]
name = "arkavo"
path = "src/main.rs"